# pico-hid-firmware

./: .gitignore  CMakeLists.txt  README.md  main.c  tusb_config.h  usb_descriptors.c
arduino/serial_write.ino/: serial_write.ino.ino
pico-uart-printf/: CMakeLists.txt  main.c
pico-uart-printf/teensy/serial_read_write.ino/: serial_read_write.ino.ino
raspberry_pi_pico/project1/: CMakeLists.txt  test.c
teensy/serial_read_write.ino/: serial_read_write.ino.ino
tinyusb/src/class/hid/: hid.h  hid_device.c  hid_device.h
